overhaul movement. Add some sprites

--- a/project.json
+++ b/project.json
@@ -165,23 +165,23 @@
 		]
 	},
 	"meta": {
-		"Dog.json": {},
+		"LICENSE": {},
 		"Main.java": {},
-		"project.json": {},
-		"dog.png": {},
-		"Pattern.png": {},
-		"": {},
+		"README.md": {},
 		"Robo.aseprite": {},
 		"Robo.json": {},
 		"Robo.png": {},
-		"V-Robot.elf": {},
-		"V-Robot.bin": {},
-		"Tile.aseprite": {},
-		"Tile.json": {},
-		"Tile.png": {},
 		"Trash.aseprite": {},
 		"Trash.json": {},
-		"Trash.png": {}
+		"V-Robot.bin": {},
+		"V-Robot.elf": {},
+		"Trash.png": {},
+		"project.json": {},
+		"": {},
+		"Castpixel16.pal": {},
+		"Charger.aseprite": {},
+		"Charger.json": {},
+		"Charger.png": {}
 	},
 	"ideVersion": 10000,
 	"BUILDFlags": {
