Cleanup and restructure

--- a/project.json
+++ b/project.json
@@ -2,11 +2,7 @@
 	"metadata": {},
 	"lastBuffer": "Main.java",
 	"files": {
-		"Dog.json": {},
-		"Hello Java.bin": {},
-		"Hello Java.elf": {},
 		"Main.java": {},
-		"Pattern.png": {},
 		"dog.png": {},
 		"dump.bin": {},
 		"firmware.bin": {},
@@ -165,23 +161,35 @@
 		]
 	},
 	"meta": {
+		"Castpixel16.pal": {},
+		"Charger.aseprite": {},
+		"Charger.json": {},
+		"Charger.png": {},
+		"GameState.java": {},
+		"Global.java": {},
 		"LICENSE": {},
 		"Main.java": {},
+		"Pico8.pal": {},
 		"README.md": {},
 		"Robo.aseprite": {},
 		"Robo.json": {},
 		"Robo.png": {},
+		"Shop.java": {},
+		"Start.java": {},
 		"Trash.aseprite": {},
 		"Trash.json": {},
-		"V-Robot.bin": {},
-		"V-Robot.elf": {},
 		"Trash.png": {},
+		"V-Robot.bin": {},
+		"V-Robot.bin.1.png": {},
+		"V-Robot.elf": {},
+		"managers": {},
 		"project.json": {},
+		"managers/SaveManager.java": {},
 		"": {},
-		"Castpixel16.pal": {},
-		"Charger.aseprite": {},
-		"Charger.json": {},
-		"Charger.png": {}
+		"V-Robot.eeprom": {},
+		"src": {},
+		"src/Global.java": {},
+		"src/Main.java": {}
 	},
 	"ideVersion": 10000,
 	"BUILDFlags": {
