minor ui poking around

--- a/project.json
+++ b/project.json
@@ -161,35 +161,31 @@
 		]
 	},
 	"meta": {
-		"Castpixel16.pal": {},
 		"Charger.aseprite": {},
+		"Castpixel16.pal": {},
 		"Charger.json": {},
-		"Charger.png": {},
 		"GameState.java": {},
+		"Main.java": {},
 		"Global.java": {},
 		"LICENSE": {},
-		"Main.java": {},
-		"Pico8.pal": {},
+		"Charger.png": {},
 		"README.md": {},
+		"Shop.java": {},
 		"Robo.aseprite": {},
 		"Robo.json": {},
 		"Robo.png": {},
-		"Shop.java": {},
-		"Start.java": {},
 		"Trash.aseprite": {},
 		"Trash.json": {},
+		"Start.java": {},
 		"Trash.png": {},
-		"V-Robot.bin": {},
 		"V-Robot.bin.1.png": {},
-		"V-Robot.elf": {},
-		"managers": {},
-		"project.json": {},
-		"managers/SaveManager.java": {},
-		"": {},
 		"V-Robot.eeprom": {},
-		"src": {},
-		"src/Global.java": {},
-		"src/Main.java": {}
+		"managers": {},
+		"V-Robot.elf": {},
+		"project.json": {},
+		"V-Robot.bin": {},
+		"": {},
+		"managers/SaveManager.java": {}
 	},
 	"ideVersion": 10000,
 	"BUILDFlags": {
