Update full trash transition

--- a/project.json
+++ b/project.json
@@ -161,29 +161,32 @@
 		]
 	},
 	"meta": {
-		"Charger.aseprite": {},
+		"Battery.png": {},
+		"Battery.aseprite": {},
 		"Castpixel16.pal": {},
+		"Battery.json": {},
 		"Charger.json": {},
-		"GameState.java": {},
-		"Main.java": {},
-		"Global.java": {},
-		"LICENSE": {},
+		"Charger.aseprite": {},
 		"Charger.png": {},
+		"GameState.java": {},
+		"Global.java": {},
+		"Main.java": {},
 		"README.md": {},
-		"Shop.java": {},
-		"Robo.aseprite": {},
+		"LICENSE": {},
 		"Robo.json": {},
 		"Robo.png": {},
+		"Shop.java": {},
+		"Robo.aseprite": {},
 		"Trash.aseprite": {},
-		"Trash.json": {},
 		"Start.java": {},
+		"Trash.json": {},
 		"Trash.png": {},
 		"V-Robot.bin.1.png": {},
+		"V-Robot.bin": {},
 		"V-Robot.eeprom": {},
 		"managers": {},
-		"V-Robot.elf": {},
 		"project.json": {},
-		"V-Robot.bin": {},
+		"V-Robot.elf": {},
 		"": {},
 		"managers/SaveManager.java": {}
 	},
