--- a/project.json
+++ b/project.json
@@ -161,34 +161,40 @@
 		]
 	},
 	"meta": {
-		"Battery.png": {},
-		"Battery.aseprite": {},
+		"": {},
 		"Castpixel16.pal": {},
-		"Battery.json": {},
-		"Charger.json": {},
-		"Charger.aseprite": {},
-		"Charger.png": {},
 		"GameState.java": {},
-		"Global.java": {},
+		"Globals.java": {},
 		"Main.java": {},
-		"README.md": {},
 		"LICENSE": {},
-		"Robo.json": {},
-		"Robo.png": {},
-		"Shop.java": {},
-		"Robo.aseprite": {},
-		"Trash.aseprite": {},
-		"Start.java": {},
-		"Trash.json": {},
-		"Trash.png": {},
-		"V-Robot.bin.1.png": {},
+		"README.md": {},
 		"V-Robot.bin": {},
 		"V-Robot.eeprom": {},
+		"V-Robot.elf": {},
+		"aseprite": {},
 		"managers": {},
 		"project.json": {},
-		"V-Robot.elf": {},
-		"": {},
-		"managers/SaveManager.java": {}
+		"screens": {},
+		"sprites": {},
+		"aseprite/Battery.aseprite": {},
+		"aseprite/Charger.aseprite": {},
+		"aseprite/Robo.aseprite": {},
+		"aseprite/Trash.aseprite": {},
+		"managers/SaveManager.java": {},
+		"screens/ChargeScreen.java": {},
+		"screens/CleaningScreen.java": {},
+		"screens/ShopScreen.java": {},
+		"screens/StartScreen.java": {},
+		"sprites/Battery.json": {},
+		"sprites/Battery.png": {},
+		"sprites/Charger.json": {},
+		"sprites/Charger.png": {},
+		"sprites/Robo.json": {},
+		"sprites/Robo.png": {},
+		"sprites/Trash.json": {},
+		"sprites/Trash.png": {},
+		"Battery.aseprite": {},
+		"screens/EmptyScreen.java": {}
 	},
 	"ideVersion": 10000,
 	"BUILDFlags": {
